--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,8 @@ python_requires = >=3.9
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
-    mattress
-    knncolle>=0.2.0
+    mattress>=0.4.1
+    knncolle>=0.3.0
     numpy
     biocutils>=0.2.1
     delayedarray
