--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,7 +28,20 @@ jobs:
       - name: Get latest CMake
         uses: lukka/get-cmake@latest
 
+      - name: Cache installed
+        uses: actions/cache@v4
+        with:
+          path: installed
+          key: installed-${{ matrix.python-version }}
+
+      - name: Set up igraph
+        shell: python
+        run: |
+            import setup
+            build_igraph(None)
+
       - name: Test with tox
         run: |
+          export SCRANPY_INSTALLED=$(getwd)/installed
           pip install tox
           tox
