--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,10 +35,7 @@ jobs:
           key: installed-${{ matrix.python-version }}
 
       - name: Set up igraph
-        shell: python
-        run: |
-            import setup
-            build_igraph(None)
+        run: python3.10 -c "import setup; print(setup.build_igraph(None));"
 
       - name: Test with tox
         run: |
