--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,7 +35,9 @@ jobs:
           key: installed-${{ matrix.python-version }}
 
       - name: Set up igraph
-        run: python -c "import setup; print(setup.build_igraph(None));"
+        run: |
+            python -m pip install setuptools
+            python -c "import setup; print(setup.build_igraph(None));"
 
       - name: Test with tox
         run: |
