Add verbose mode for package install.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,6 +41,6 @@ jobs:
 
       - name: Test with tox
         run: |
-          export SCRANPY_INSTALLED=$(getwd)/installed
+          export SCRANPY_INSTALLED=$(pwd)/installed
           pip install tox
-          tox
+          tox -vvv
