--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ passenv =
 commands =
     clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
     clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
-    build: python -m build {posargs}
+    build: python -m build {posargs} --verbose
 # By default, both `sdist` and `wheel` are built. If your sdist is too big or you don't want
 # to make it available, consider running: `tox -e build -- --wheel`
 
