--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,7 +28,19 @@ jobs:
       - name: Get latest CMake
         uses: lukka/get-cmake@latest
 
+      - name: Cache installed
+        uses: actions/cache@v4
+        with:
+          path: installed
+          key: installed-${{ matrix.python-version }}
+
+      - name: Set up igraph
+        run: |
+            python -m pip install setuptools
+            python -c "import setup; print(setup.build_igraph(None));"
+
       - name: Test with tox
         run: |
+          export SCRANPY_INSTALLED_PATH=$(pwd)/installed
           pip install tox
-          tox
+          tox -vvv
