--- a/tox.ini
+++ b/tox.ini
@@ -10,11 +10,13 @@ isolated_build = True
 
 [testenv]
 description = Invoke pytest to run automated tests
+install_command = python -I -m pip install -v {opts} {packages}
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
     HOME
     SETUPTOOLS_*
+    SCRANPY_*
 extras =
     testing
 commands =
@@ -46,10 +48,11 @@ deps =
     build: build[virtualenv]
 passenv =
     SETUPTOOLS_*
+    SCRANPY_*
 commands =
     clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
     clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
-    build: python -m build {posargs}
+    build: python -m -v build {posargs}
 # By default, both `sdist` and `wheel` are built. If your sdist is too big or you don't want
 # to make it available, consider running: `tox -e build -- --wheel`
 
@@ -61,6 +64,7 @@ description =
     linkcheck: Check for broken links in the documentation
 passenv =
     SETUPTOOLS_*
+    SCRANPY_*
 setenv =
     DOCSDIR = {toxinidir}/docs
     BUILDDIR = {toxinidir}/docs/_build
