--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -12,29 +12,36 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: true
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
         with:
-          python-version: 3.11
+          python-version: 3.14
           cache: 'pip'
 
-      - name: Install Python dependencies
+      - name: Get latest CMake
+        uses: lukka/get-cmake@latest
+
+      - name: Cache installed
+        uses: actions/cache@v4
+        with:
+          path: installed
+          key: installed-build-docs
+
+      - name: Set up igraph
         run: |
-          python -m pip install --upgrade pip setuptools
-          pip install cmake pybind11 numpy tox assorthead mattress>=0.1.4 knncolle>=0.2.0
+          python -m pip install setuptools
+          python -c "import setup; print(setup.build_igraph(None));"
 
       - name: Build docs
         run: |
-          python setup.py build_ext --inplace
-          cp build/lib*/scranpy/lib_scranpy* src/scranpy/
+          export SCRANPY_INSTALLED_PATH=$(pwd)/installed
+          touch src/scranpy/lib_scranpy.py
+          pip install tox
           tox -e docs
-          touch ./docs/_build/html/.nojekyll
 
       - name: GH Pages Deployment
-        uses: JamesIves/github-pages-deploy-action@4.1.3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: ./docs/_build/html
