Cleaned up dependencies.
- removed igraph from the test requirements.
- added SE, SCE, etc. to the optional install.
- promoted BiocFrame to a hard dependency.

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ install_requires =
     knncolle>=0.3.0
     numpy
     biocutils>=0.2.1
+    biocframe>=0.6.2
     delayedarray
 
 [options.packages.find]
@@ -65,7 +66,9 @@ exclude =
 # `pip install scranpy[PDF]` like:
 # PDF = ReportLab; RXP
 optional = 
-    scrnaseq>=0.3.1
+    singlecellexperiment
+    summarizedexperiment
+    scrnaseq
     scipy
 
 # Add here test requirements (semicolon/line-separated)
@@ -73,11 +76,9 @@ testing =
     setuptools
     pytest
     pytest-cov
-    biocframe>=0.6.2
     singlecellexperiment>=0.4.0
     summarizedexperiment>=0.4.0
     scrnaseq>=0.3.1
-    igraph
     scipy
 
 [options.entry_points]
