--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -40,6 +40,12 @@ jobs:
           pip install tox
           tox -e docs
 
+      - name: Edit CSS
+        run: |
+          CSSPATH=./docs/_build/html/_static/styles/furo.css
+          cat ${CSSPATH} | sed "s/ol,ul{\\([^}]*\\);padding-left:1\\.2rem}/ol,ul{\\1}/" > tmp.css
+          mv tmp.css ${CSSPATH}
+
       - name: GH Pages Deployment
         uses: JamesIves/github-pages-deploy-action@v4
         with:
