--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,10 @@ license = MIT
 license_files = LICENSE.txt
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
-url = https://github.com/biocpy/scranpy
+url = https://github.com/libscran/scranpy
 # Add here related links, for example:
 project_urls =
-    Documentation = https://github.com/biocpy/scranpy
+    Documentation = https://github.com/libscran/scranpy
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
