Avoid duplication of dependencies between optional/testing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,6 @@ project_urls =
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
-
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.org/classifiers/
 classifiers =
@@ -66,9 +65,9 @@ exclude =
 # `pip install scranpy[PDF]` like:
 # PDF = ReportLab; RXP
 optional = 
-    singlecellexperiment
-    summarizedexperiment
-    scrnaseq
+    singlecellexperiment>=0.6.0
+    summarizedexperiment>=0.6.3
+    scrnaseq>=0.3.1
     scipy
 
 # Add here test requirements (semicolon/line-separated)
@@ -76,10 +75,7 @@ testing =
     setuptools
     pytest
     pytest-cov
-    singlecellexperiment>=0.6.0
-    summarizedexperiment>=0.6.3
-    scrnaseq>=0.3.1
-    scipy
+    %(optional)s
 
 [options.entry_points]
 # Add here console scripts like:
