--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ optional =
     singlecellexperiment>=0.6.0
     summarizedexperiment>=0.6.3
     scrnaseq>=0.3.1
+    orgdb
     scipy
 
 # Add here test requirements (semicolon/line-separated)
